--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     color: white;
 }
 .logo img {
-    height: 55px;
-    width: 370px;
-    margin-right: 15px;
-    padding-left: 90px;
+    height: 75px;
+    width: 470px;
+    margin-right: 5px;
+    padding-left: 50px;
 }
 .nav-links {
     display: flex;
@@ -76,7 +76,7 @@
         padding-right: 5px;
     }
 }
-@media (max-width: 800px) {
+@media (max-width: 890px) {
     .header {
         flex-wrap: wrap;
         padding: 5px 10px;
@@ -354,13 +354,21 @@ color: #2F398D ;
 
 
 
+
+
+
+
+
+
+
+
 /* //header, logo, Start :0 */
     </style>
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="z5987140149637_58cef58b20ce6454e887ac4c3030bb43.jpg" alt="IGC Logo">
+            <img src="z6082412892342_b833b3d5b787e2785cd45c60ca4c961d.jpg" alt="IGC Logo">
         </div>
         <nav class="nav-links">
             <a href="#">GIỚI THIỆU</a>
@@ -542,14 +550,13 @@ color: #2F398D ;
             <div class="social">
                 <h3>KẾT NỐI VỚI CHÚNG TÔI</h3>
                 <div class="social-icons">
-                    <a href="#"><img src="fb.png" alt="Facebook"></a>
-                    <a href="#"><img src="yt.png" alt="YouTube"></a>
+                    <a href="https://www.facebook.com/truongsonadezi" target="_blank"><img src="fb.png" alt="Facebook"></a>
+                    <a href="https://www.youtube.com/@sonadezicollege" target="_blank"><img src="yt.png" alt="YouTube"></a>
                     <a href="#"><img src="zl.png" alt="Zalo"></a>
-                </div>
             </div>
         </div>
         <div class="bottom-text">© TẬP ĐOÀN GIÁO DỤC IGC</div>
-        <h6>AAAA Zà thâm độc chớt tiệt (　:ﾟ皿ﾟ), ĐỒ ÁN LOZ, Không muốn làm nữa o(｀Д´*)o, Mốt ra trường rồi mà thấy trường sài đồ án của e thì e đánh bàn quyền giá 100tr KKKKK</h6>
+        <h6>AAAA (　:ﾟ皿ﾟ), ĐỒ ÁN ĐAU KHỔ ÂM TÌ ĐỊA NGỤC, Không muốn làm nữa o(｀Д´*)o, Mốt ra trường rồi mà thấy trường sài đồ án của e thì e đánh bàn quyền giá 100tr KKKKK</h6>
     </div>
 </body>
 </html>
